# sellerclaw-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-plugin.yml  release.yml
extension/: manifest.json
extension/server/: main.py
plugin/claude/: README.md
plugin/shared/hooks/: session_start.sh
plugin/shared/skills/sellerclaw-orders/: SKILL.md
plugin/shared/skills/sellerclaw/references/: setup.md
plugin/targets/claude-code/: .mcp.json
plugin/targets/claude-code/.claude-plugin/: plugin.json
plugin/targets/claude-cowork/: .mcp.json
plugin/targets/claude-cowork/.claude-plugin/: plugin.json
plugin/targets/claude-desktop/: manifest.json
plugin/targets/claude-desktop/server/: main.py
plugin/targets/claude-web/.claude-plugin/: plugin.json
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/skills/sellerclaw/: SKILL.md
plugins/claude-code/skills/sellerclaw-ads/: SKILL.md
plugins/claude-code/skills/sellerclaw-listings/: SKILL.md
plugins/claude-code/skills/sellerclaw-research/: SKILL.md
plugins/claude-code/skills/sellerclaw/references/: capabilities.md
scripts/: build_plugin.py  install-skill.ps1  install-skill.sh  install.ps1  install.sh
sellerclaw_cli/: __init__.py  __main__.py  _agent_id.py  _auth.py  _client.py  _command_group.py  _config.py  _errors.py  _output.py  _runtime.py  cli.py  mcp_server.py
sellerclaw_cli/commands/: _auth_cli.py  _discover.py  account.py  action_requests.py  ad_accounts.py  agent_files.py  amazon.py  amazon_listings.py  amazon_orders.py  amazon_store.py  analytics.py  bigcommerce.py  bigcommerce_listings.py  bigcommerce_orders.py  bigcommerce_store.py  catalog.py  channels.py  chats.py  competitors.py  ebay.py  ebay_feedback.py  ebay_finances.py  ebay_listings.py  ebay_orders.py  ebay_promoted.py  ebay_shipping.py  ebay_store.py  email.py  etsy.py  etsy_finances.py  etsy_listings.py  etsy_orders.py  etsy_store.py  facebook_ads.py  goals.py  google_ads.py  integrations.py  kb.py  klaviyo.py  listings.py  (+35 more)
skill/sellerclaw/: SKILL.md
skill/sellerclaw/references/: setup.md
skills/sellerclaw-setup/: SKILL.md
tests/unit/: conftest.py  test_agent_files.py  test_agent_id.py  test_auth.py  test_build_plugin.py  test_cli_auth.py  test_client.py  test_command_group.py  test_commands_analytics.py  test_commands_channels.py  test_commands_competitors.py  test_commands_ebay_feedback.py  test_commands_ebay_listings.py  test_commands_ebay_promoted.py  test_commands_ebay_shipping.py  test_commands_reviews.py  test_commands_social.py  test_commands_spreadsheet.py  test_commands_store_audit.py  test_config.py  test_discover.py  test_mcp_http.py  test_mcp_server.py  test_output.py  test_runtime_body.py  test_usage_errors.py
